--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"LazyBOYz0.aternos.me",
-	"port": "28685",
-	"name": "BOT_NAME"
+	"ip":"RealMadrid007.aternos.me",
+	"port": "55896",
+	"name": "_Z_O_R_"
 }
